Changes images extensions, adds the corret texts and fix Technologies alignment

--- a/style.css
+++ b/style.css
@@ -80,7 +80,12 @@
     border: 0px;
     border-radius: 8px;
     border: 2px solid #3882F6;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
+
 #imagem-codigo{
     width: 600px;
 }
@@ -119,7 +124,7 @@ h1{
 }
 .prog-logo{
     width: 100px;
-    border: 4px solid #1F2937;
+    border: 2px solid #1F2937;
     border-radius: 50%;
 }
 
